--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -15,6 +15,12 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+
     <style type="text/css">
       .platform-ios .manual-ios-statusbar-padding{
         padding-top:20px;
@@ -36,8 +42,7 @@
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
-	<script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
-
+      
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
