--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -7,8 +7,8 @@
   <title></title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-  <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
 
@@ -45,6 +45,9 @@
       padding-top: 0px !important;
     }
   </style>
+
+  <script src = "https://cdn.zingchart.com/zingchart.min.js" ></script>
+  <script src = "https://cdn.zingchart.com/angular/zingchart-angularjs.js" ></script>
 
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
