--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -17,7 +17,10 @@
     -->
 
   <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
 
   <!-- AngularFire -->
   <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
