--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -39,14 +39,24 @@
     }
   </style>
 
-  <script src="js/Chart.min.js"></script>
-  <script src="js/angular-chart.min.js"></script>
+  <script src="js/vendors/Chart.min.js"></script>
+  <script src="js/vendors/angular-chart.min.js"></script>
 
   <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
   <script src="js/routes.js"></script>
-  <script src="js/services.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/services/services.js"></script>
+
+  <script src="js/controllers.js"></script>
+
+   <!--
+  <script src="js/controllers/chart.js"></script>
+  <script src="js/controllers/firebase.js"></script>
+  <script src="js/controllers/home.js"></script>
+  <script src="js/controllers/logger.js"></script>
+  <script src="js/controllers/node.js"></script>
+  <script src="js/controllers/radio.js"></script>
+-->
 
   <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
