refactor + better datetime management

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -89,11 +89,12 @@
   <script src="js/services/push.js"></script>
 
   <script src="js/controllers/home.js"></script>
-  <script src="js/controllers/node.js"></script>
-  <script src="js/controllers/radio.js"></script>
+  <script src="js/controllers/NodeSetup.js"></script>
+  <script src="js/controllers/RadioSetup.js"></script>
   <script src="js/controllers/chart.js"></script>
-  <script src="js/controllers/firebase.js"></script>
-  <script src="js/controllers/logger.js"></script>
+  <script src="js/controllers/FirebaseSetup.js"></script>
+  <script src="js/controllers/History.js"></script>
+  <script src="js/controllers/NodeInfo.js"></script>
 
   <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
