--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -119,6 +119,7 @@
   <script src="js/controllers/FirebaseSetup.js"></script>
   <script src="js/controllers/History.js"></script>
   <script src="js/controllers/NodeInfo.js"></script>
+  <script src="js/controllers/TimerSetup.js"></script>
 
   <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
