ionic added digital IO

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -120,6 +120,7 @@
   <script src="js/controllers/History.js"></script>
   <script src="js/controllers/NodeInfo.js"></script>
   <script src="js/controllers/TimerSetup.js"></script>
+  <script src="js/controllers/DioSetup.js"></script>
 
   <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
