--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -100,6 +100,7 @@
     }
   </style>
 
+  <script src="js/vendors/moment-with-locales.js"></script>
   <script src="js/vendors/Chart.min.js"></script>
   <script src="js/vendors/angular-chart.min.js"></script>
 
