revised action schema

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -123,6 +123,7 @@
   <script src="js/controllers/TimerSetup.js"></script>
   <script src="js/controllers/DigitalIOSetup.js"></script>
   <script src="js/controllers/LogicalIOSetup.js"></script>
+  <script src="js/controllers/FunctionSetup.js"></script>
 
   <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
