ionic spinner update

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -98,6 +98,10 @@
       color: white;
       /*Text color for each item, overrides the color property above*/
     }
+
+    div.spin {
+      text-align: center;
+    }
   </style>
 
   <script src="js/vendors/moment-with-locales.js"></script>
